manifests/bad/deploy-image-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-image-latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-image
  template:
    metadata:
      labels:
        app: bad-image
    spec:
      containers:
        - name: app
          image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/security/nginx:latest
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
