manifests/bad/pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-hostpath
spec:
  hostNetwork: true
  volumes:
    - name: host-logs
      hostPath:
        path: /var/log
  containers:
    - name: busybox
      image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/security/busybox:1.36
      command: ["sleep", "3600"]
      volumeMounts:
        - name: host-logs
          mountPath: /mnt/logs
      securityContext:
        privileged: false
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 50m
          memory: 64Mi
