manifests/bad/pod-run-as-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-run-as-root
spec:
  containers:
    - name: app
      image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/security/busybox:1.36
      command: ["sleep", "3600"]
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
