manifests/bad/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bad-nodeport
spec:
  selector:
    app: bad-nodeport
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
