manifests/bad/ingress-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-ingress-no-tls
spec:
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bad-nodeport
                port:
                  number: 80
